# piposerver

./: .gitignore  README.MD  build.gradle  gradlew  settings.gradle
native/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  color.h  com_mobilex_piposerver_PiposerverApplication.h  com_mobilex_piposerver_service_PipoService.h  jni-native.cpp  main.cpp
src/main/java/com/mobilex/piposerver/: PiposerverApplication.java
src/main/java/com/mobilex/piposerver/batch/job/: TempDeletionConfig.java
src/main/java/com/mobilex/piposerver/batch/scheduler/: TempDeletionScheduler.java
src/main/java/com/mobilex/piposerver/batch/tasklet/: TempDeletionTasklet.java
src/main/java/com/mobilex/piposerver/controller/: PipoController.java  UserController.java
src/main/java/com/mobilex/piposerver/dto/: PipoDTO.java  ResponseDTO.java  UserDTO.java
src/main/java/com/mobilex/piposerver/exception/: MalformedPipoException.java  MalformedUserException.java  MultipartFileException.java  NotAuthorizedException.java  PipoFileNotFoundException.java  PipoNotProcessedException.java  UnknownPipoException.java  UserNotFoundException.java
src/main/java/com/mobilex/piposerver/model/: PipoEntity.java  UserEntity.java
src/main/java/com/mobilex/piposerver/persistance/: PipoRepository.java  UserRepository.java
src/main/java/com/mobilex/piposerver/security/: JwtTokenProvider.java
src/main/java/com/mobilex/piposerver/service/: PipoService.java  UserService.java
src/main/resources/: application.properties
src/test/java/com/mobilex/piposerver/: PiposerverApplicationTests.java
